src/test/deca/syntax/invalid/sansobjet/Or1.deca
//Or1.deca:4:4: mismatched input '||' expecting {IDENT, '\['}
{
    int x;
    ||;
}
